--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "gulp-sourcemaps": "^3.0.0",
     "imagemin": "^8.0.0",
     "sass": "^1.35.2"
+  },
+  "dependencies": {
+    "bootstrap": "^5.1.0"
   }
 }
