--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "sass": "^1.35.2"
   },
   "dependencies": {
-    "bootstrap": "^5.1.0"
+    "bootstrap": "^5.1.0",
+    "swiper": "^7.0.1"
   }
 }
